# SES20-Rename-Method

./: CMakeLists.txt  Memoes.cpp  Memoes.hpp  Memoes_t.cpp
